--- a/variation.tex
+++ b/variation.tex
@@ -2,6 +2,38 @@
 
 \chapter{The variation}
 
+\section{Generalizations}
+
+\begin{itemize}
+  \item when a language's light-headed relatives are \tsc{d} - \tsc{wh}, non-matching is never allowed
+  \item with \tsc{wh} morphology, the internal case can win
+  \item with \tsc{d} morphology, the external case can win (or is it when the relative pronoun can take a complement)
+\end{itemize}
+
+
+\section{Two \tsc{d}-examples}
+
+\subsection{\tsc{d} in OHG}
+
+works via attraction
+
+\subsection{\tsc{d} in Gothic}
+
+does not work via attraction, but complementizer(?)
+
+\section{\tsc{wh} in German}
+
+show how this is different from d-relatives (the impossiblitiy for non-matching for \tsc{d} \tsc{w} light headed relative languages has to follow from this)
+
+
+
+
+
+
+
+
+\chapter*{old variation}
+
 \section{\ac{ohg} and \ac{mg} have the same winner}
 
 \subsection{\ac{mg}}
