--- a/thesis.tex
+++ b/thesis.tex
@@ -41,11 +41,11 @@
 
 \include{introduction}
 
-\part{The stable case facts}\label{part:complexity}
+\part{The case facts}\label{part:complexity}
 \include{recurring-pattern}
 \include{case-decomposition}
 
-\part{Differences within Germanic}\label{part:direction}
+\part{Different types of relative pronouns}\label{part:direction}
 \include{variation}
 \include{morphology-syntax}
 
