more detailed into the data
ohg and gothic

--- a/variation.tex
+++ b/variation.tex
@@ -2,6 +2,109 @@
 
 \chapter{The variation}
 
+
+\section{Only internal}
+
+In \ac{mg}, only internal case can win.
+
+Internal is grammatical.
+
+Consider the example in \ref{ex:mg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
+The internal case is dative. The predicate \tit{vertraut} `trusts' takes dative objects.
+The external case is accusative. The predicate \tit{lade ein} `invite' takes accusative objects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+
+\exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+I invite\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
+`I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+
+Consider the example in \ref{ex:mg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
+The internal case is dative. The predicate \tit{vertraut} `trusts' takes dative objects.
+The external case is nominative. The predicate \tit{besucht} `visits' takes nominative subjects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+
+\exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
+us visits\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria trusts\scsub{[dat]}\\
+`Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
+
+Consider the example in \ref{ex:mg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
+The internal case is accusative. The predicate \tit{mag} `likes' takes accusative objects.
+The external case is nominative. The predicate \tit{besucht} `visits' takes nominative subjects.
+The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+
+\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+ Us visits\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
+ `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
+
+External is ungrammatical.
+
+Consider the example in \ref{ex:mg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
+The internal case is accusative. The predicate \tit{mag} `likes' takes accusative objects.
+The external case is dative. The predicate \tit{vertraue} `trust' takes dative objects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+This is ungrammatical in German: only the internal case can win.
+
+\exg. *Ich vertraue wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+I trust\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria likes\scsub{[acc]}.\\
+`I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
+
+Consider the example in \ref{ex:mg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
+The internal case is nominative. The predicate \tit{mag} `likes' takes nominative subjects.
+The external case is dative. The predicate \tit{vertraue} `trust' takes dative objects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+This is ungrammatical in German: only the internal case can win.
+
+\exg. *Ich vertraue, wem \tbf{Hitchcock} \tbf{mag}.\\
+I trust\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} Hitchcock likes\scsub{[nom]}\\
+`I trust who likes Hitchcock.' \flushfill{\pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom}
+
+Consider the example in \ref{ex:mg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
+The internal case is nominative. The predicate \tit{mir sympathisch ist} `I like' takes nominative subjects.
+The external case is dative. The predicate \tit{vertraue} `trust' takes dative objects.
+The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the external case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+This is ungrammatical in German: only the internal case can win.
+
+\exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
+I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} me nice is\scsub{[nom]}\\
+`I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom}
+
+To summarize
+
+\begin{table}[H]
+  \center
+  \caption {Summary of \ac{mg} matching headless relative data}
+		\begin{tabular}{c|c|c|c}
+		  \toprule
+			\textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+		        & [\ac{nom}]
+		        & [\ac{acc}]
+		        & [\ac{dat}]
+		        \\ \cmidrule{1-4}
+		    [\ac{nom}]
+		        &
+		        &
+		        &
+		        \\ \cmidrule{1-4}
+		    [\ac{acc}]
+		        & \ac{acc}
+		        &
+		        &
+		        \\ \cmidrule{1-4}
+		    [\ac{dat}]
+		        & \ac{dat}
+		        & \ac{dat}
+		        &
+		        \\
+		  \bottomrule
+		\end{tabular}
+\end{table}
+
+
+
+
+
+
+
 \section{Generalizations}
 
 \begin{itemize}
@@ -35,48 +138,6 @@ show how this is different from d-relatives (the impossiblitiy for non-matching 
 \chapter*{old variation}
 
 \section{\ac{ohg} and \ac{mg} have the same winner}
-
-\subsection{\ac{mg}}
-
-let me show that the claim I made for Gothic holds for \ac{mg} as well: \tsc{dat} wins over \tsc{acc} wins over \tsc{nom}.
-
-Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case is ungrammatical.
-
-\exg. *Ich {lade ein} wen \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
- I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-u}
-
-Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case is ungrammatical.
-
-\exg. *Uns besucht wer \tbf{Maria} \tbf{vertraut}.\\
- us visits\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria trusts\scsub{[dat]}\\
- `Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}
-
-Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case is ungrammatical.
-
-\exg. *Uns besucht wer \tbf{Maria} \tbf{mag}.\\
- Us visits\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
- `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-u}
-
-Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case is ungrammatical.
-
-\exg. *Ich vertraue \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}. \\
- I trust\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria likes\scsub{[acc]}.\\
- `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
-
-Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case is ungrammatical.
-
-\exg. *Ich vertraue, \tbf{wer} \tbf{Hitchcock} \tbf{mag}.\\
- I trust\scsub{[dat]} \tsc{rel}.\ac{nom}.\tsc{an} Hitchcock likes\scsub{[nom]}\\
- `I trust who likes Hitchcock.' \flushfill{\pgcitealt{vogel2001}{345}}
-
-Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case is ungrammatical.
-
-\exg. *Ich {lade ein}, \tbf{wer} \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
- I invite\scsub{[acc]} \tsc{rel}.\ac{nom}.\tsc{an} me nice is\scsub{[nom]}\\
- `I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}
-
-
 
 
 \subsection{\ac{ohg}}
@@ -116,88 +177,7 @@ In Italian, case mismatch is not allowed.
 
 
 
-\subsection{Only from internal: Modern German}
 
-\subsubsection{external case = ungrammatical}
-
-\ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
-
-\exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
- I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} me nice is\scsub{[nom]}\\
- `I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}
-
-\ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
-
-\exg. *Ich vertraue, wem \tbf{Hitchcock} \tbf{mag}.\\
- I trust\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} Hitchcock likes\scsub{[nom]}\\
- `I trust who likes Hitchcock.' \flushfill{\pgcitealt{vogel2001}{345}}
-
-\ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
-
-\exg. *Ich vertraue wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
- I trust\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria likes\scsub{[acc]}.\\
- `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
-
-
-
-\subsubsection{internal case = grammatical}
-
-Consider the example in \ref{ex:mg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
-The internal case is dative. The predicate \tit{vertraut} `trusts' takes dative objects.
-The external case is accusative. The predicate \tit{lade ein} `invite' takes accusative objects.
-The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-
-\exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
- I invite\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
-
-Consider the example in \ref{ex:mg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
-The internal case is dative. The predicate \tit{vertraut} `trusts' takes dative objects.
-The external case is nominative. The predicate \tit{besucht} `visits' takes nominative subjects.
-The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-
-\exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
- us visits\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria trusts\scsub{[dat]}\\
- `Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
-
- Consider the example in \ref{ex:mg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
- The internal case is accusative. The predicate \tit{mag} `likes' takes accusative objects.
- The external case is nominative. The predicate \tit{besucht} `visits' takes nominative subjects.
- The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-
- \exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
-  Us visits\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
-  `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
-
-
- \begin{table}[H]
-   \center
-   \caption {Summary of \ac{mg} matching headless relative data}
- 		\begin{tabular}{c|c|c|c}
- 		  \toprule
- 			\textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
- 		        & [\ac{nom}]
- 		        & [\ac{acc}]
- 		        & [\ac{dat}]
- 		        \\ \cmidrule{1-4}
- 		    [\ac{nom}]
- 		        &
- 		        &
- 		        &
- 		        \\ \cmidrule{1-4}
- 		    [\ac{acc}]
- 		        & \ac{acc}
- 		        &
- 		        &
- 		        \\ \cmidrule{1-4}
- 		    [\ac{dat}]
- 		        & \ac{dat}
- 		        & \ac{dat}
- 		        &
- 		        \\
- 		  \bottomrule
- 		\end{tabular}
- \end{table}
 
 
  \subsection{Only from external: Old High German}
@@ -215,6 +195,9 @@ Examples in which the internal case is accusative, the external case is dative a
 \exg. bistû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
  {are you} older\scsub{[dat]} {Abraham} and \tsc{rel}.\ac{dat}.\tsc{pl} one here just named\scsub{[acc]}\\
  `are you really older than Abraham and (those) who have been mentioned here?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}, after Delbrück}\label{ex:ohg-dat-acc}
+
+\exg. Bis	tú	nu	{zi wáre}	furira	Ábrahame	?	ouh	thén	man	hiar	nu	zálta\\
+sein	du	nun,jetzt	wahrlich	erhabener,wertvoller	Abraham	?	auch,und	der,die,das	man	hier	nun,jetzt	erzählen,verkünden\\
 
 %% zoek voor deze!! Übersetzung in Delbrück, S. 373
 %also take his spelling
@@ -242,6 +225,8 @@ Examples in which the internal case is nominative, the external case is accusati
 \exg. ih bibringu fona (iacobes samin endi) Iuda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
  I {bring to light}\scsub{[acc]} about (Jacob together end?) Judas \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
  `I bright to light the one who wanders through my mountains about Jacob and end of Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
+
+
 
 %%check for hans eggers spelling
 %(Der althochdeutsche Isidor. Nach der Pariser Handschrift und den Monseer Fragmenten neu herausgegeben von Hans Eggers. Tübingen: Niemeyer 1964, S. 61 und 63)
