--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -26,30 +26,42 @@ The internal case is dative. The preposition \tit{ana} `on' takes dative complem
 The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{n}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
-%no examples with dative as internal case on verb
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
  {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{n}.\ac{sg} -\ac{comp} lay\\
- `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
+ `picking up (that) on what he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
+
+% ushafjands
+% Present participle: Strong Masculine Nominative Singular
+% Lemma us-hafjan
+% `erheben'
+%
+% lag
+% Active Indicative Preterite 3rd Person Singular
+% Lemma ligan
+% `liegen'
 
 Consider the example in \ref{ex:gothic-dat-acc-rep}, repeated from the introduction. In this example, the internal case is accusative and the external case is dative.
 The internal case is accusative. The predicate \tit{jains} `sent' takes accusative objects.
 The external case is dative. The predicate \tit{galaubjaiþ} `believe' takes dative objects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
-%harbert gives 2 more examples
-
-% \exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
-%  what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
-%  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc-rep}
-
-% aiþþau hvaiwa galaubjand þammei ni hausidedun?
-% and how they believe  not heard
-% and how shall they believe in him of whom they have not heard? Rom 10:14
 
 \exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
-that believe\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} {sent}\scsub{[acc]} he\\
+that believe\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\tsc{comp} {sent}\scsub{[acc]} he\\
 `that you believe on (him) whom he has sent' \flushfill{Gothic, \ac{john} 6:29, my translation}\label{ex:gothic-dat-acc-rep}
+
+% Lemma ga-laubjan
+% 1. glauben 2. anvertrauen
+% Active Optative Present 2nd Person Plural
+%
+% Lemma in-sandjan
+% entsenden
+% Active Indicative Preterite 3rd Person Singular
+%
+% Lemma jains
+% Pronoun, demonstrative  jener
+% Strong Masculine Nominative Singular
 
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
 
@@ -58,22 +70,43 @@ The internal case is dative. The predicate \tit{fraletada} `is forgiven' takes d
 The external case is nominative. The predicate \tit{frijod} `loves' takes nominative subjects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
-%habert gives another example
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
  but \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} little {is forgiven}\scsub{[dat]} little loves\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-dat-nom}
+
+% Lemma leitils
+% klein, wenig
+% Strong Neuter Nominative Singular
+% Strong Neuter Accusative Singular
+%
+% Lemma fra-letan
+% lassen; frei lassen, entlassen; unterlassen; zulassen, erlauben; erlassen, vergeben; herablassen
+% Passive Indicative Present 1st Person Singular
+% Passive Indicative Present 3rd Person Singular
+%
+% frijod: ??
 
 Consider the example in \ref{ex:gothic-nom-dat}, in which the internal case is nominative and the external case is dative.
 The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above' takes a nominative subject.
 The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative indirect objects.
 The relative pronoun \tit{þaim} `\ac{rel}.\ac{dat}.\ac{pl}.\ac{n}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
-%harbert gives another example
 
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
  \ac{rel}.\ac{dat}.\ac{pl}.\ac{n} -\ac{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
  `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
+
+% Lemma iupa
+% oben
+%
+% Lemma wisan
+% sein
+% Active Indicative Present 3rd Person Plural
+%
+% Lemma fraþjan
+% 1. denken 2. erkennen, verstehn 3. verständig sein
+% Active Optative Present 2nd Person Plural
 
 I end with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
@@ -82,22 +115,46 @@ The internal case is accusative. The predicate \tit{frijos} `love' takes accusat
 The external case is nominative. The predicate \tit{siuks ist} `is sick' takes nominative subjects.
 The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
-%single example
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
  \ac{rel}.\ac{acc}.\ac{m}.\ac{sg} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
+
+% Lemma frijon
+% lieben
+% Active Indicative Present 2nd Person Singular
+%
+% Lemma siuks
+% krank, schwach
+% Strong Masculine Nominative Singular
+%
+% Lemma wisan
+% sein, dasein, existieren
+% Active Indicative Present 3rd Person Singular
 
 Consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{ist us Laudeikaion} `is from Laodicea' takes nominative subjects.
 The external case is accusative. The predicate \tit{ussiggwaid} `read' takes accusative objects.
 The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{n}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
-%harbert refers to 3 more examples
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
  and \ac{rel}.\ac{acc}.\ac{n}.\ac{sg} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
  `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
+
+% Lemma wisan
+% sein, dasein, existieren
+% Active Indicative Present 3rd Person Singular
+%
+% Lemma us +dat?
+% [m. Dat.] aus, von
+%
+% Lemma þu
+% du
+% Nominative Plural
+%
+% ussiggwaid
+% read? stem is ussiggw?
 
 A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match.
 The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
