--- a/thesis.tex
+++ b/thesis.tex
@@ -46,6 +46,7 @@
 \include{case-decomposition}
 
 \part{Different types of relative pronouns}\label{part:direction}
+\include{ohg-examples}
 \include{variation}
 \include{morphology-syntax}
 
@@ -58,6 +59,8 @@
 
 %%%%%
 \backmatter
+
+\include{appendix}
 
 \clearpage
 \chapter*{Primary texts}
