beetje gotisch gekeken

--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -31,6 +31,10 @@ Examples in which the internal case is dative, the external case is accusative a
  {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{n}.\ac{sg} -\ac{comp} lay\\
  `picking up (that) on what he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
 
+%aiþþau ƕaiwa galaubjand þammei ni hausidedun
+% ei galeikai þammei drauhtinoþ
+
+
 % ushafjands
 % Present participle: Strong Masculine Nominative Singular
 % Lemma us-hafjan
@@ -154,7 +158,7 @@ Examples in which the internal case is nominative, the external case is accusati
 % Nominative Plural
 %
 % ussiggwaid
-% read? stem is ussiggw?                                  
+% read? stem is ussiggw?
 
 A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match.
 The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
